force-app/main/default/objects/Card__c/fields/backimagesrc__c.field-meta.xml
<CustomField>
    <fullName>backimagesrc__c</fullName>
    <label>backimagesrc</label>
    <length>120</length>
    <type>Text</type>
</CustomField>