force-app/main/default/objects/Card__c/fields/double_sided__c.field-meta.xml
<CustomField>
    <fullName>double_sided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>double sided</label>
    <type>Checkbox</type>
</CustomField>