force-app/main/default/objects/Card__c/fields/faction_name__c.field-meta.xml
<CustomField>
    <fullName>faction_name__c</fullName>
    <label>faction name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>