force-app/main/default/objects/Card__c/fields/imagesrc__c.field-meta.xml
<CustomField>
    <fullName>imagesrc__c</fullName>
    <label>imagesrc</label>
    <length>160</length>
    <type>Text</type>
</CustomField>