force-app/main/default/objects/Card__c/fields/pack_code__c.field-meta.xml
<CustomField>
    <fullName>pack_code__c</fullName>
    <label>pack code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>