force-app/main/default/objects/Card__c/fields/pack_name__c.field-meta.xml
<CustomField>
    <fullName>pack_name__c</fullName>
    <label>pack name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>