force-app/main/default/objects/Card__c/fields/real_name__c.field-meta.xml
<CustomField>
    <fullName>real_name__c</fullName>
    <label>real name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>