force-app/main/default/objects/Card__c/fields/skill_intellect__c.field-meta.xml
<CustomField>
    <fullName>skill_intellect__c</fullName>
    <label>skill intellect</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>