force-app/main/default/objects/Card__c/fields/skill_willpower__c.field-meta.xml
<CustomField>
    <fullName>skill_willpower__c</fullName>
    <label>skill willpower</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>