force-app/main/default/objects/Card__c/fields/subname__c.field-meta.xml
<CustomField>
    <fullName>subname__c</fullName>
    <label>subname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>