force-app/main/default/objects/Card__c/fields/text__c.field-meta.xml
<CustomField>
    <fullName>text__c</fullName>
    <label>text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>