force-app/main/default/objects/Card__c/fields/traits__c.field-meta.xml
<CustomField>
    <fullName>traits__c</fullName>
    <label>traits</label>
    <length>80</length>
    <type>Text</type>
</CustomField>