force-app/main/default/objects/Card__c/fields/xp__c.field-meta.xml
<CustomField>
    <fullName>xp__c</fullName>
    <label>xp</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>