force-app/main/default/objects/Card__c/recordTypes/Other_Card.recordType-meta.xml
<RecordType>
    <fullName>Other_Card</fullName>
    <active>true</active>
    <description>Encounter cards, story cards, Act and Agenda cards, Locations</description>
    <label>Other Card</label>
</RecordType>