force-app/main/default/objects/Card__c/recordTypes/Player_Card.recordType-meta.xml
<RecordType>
    <fullName>Player_Card</fullName>
    <active>true</active>
    <description>Any card with a player back (or an investigator card?)</description>
    <label>Player Card</label>
</RecordType>