force-app/main/default/objects/Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>real_name__c</columns>
    <columns>faction_name__c</columns>
    <columns>pack_name__c</columns>
    <columns>position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>